--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,25 @@
-@import url("https://fonts.googleapis.com/css2?family=Silkscreen&display=swap");
+:root {
+  @apply .light;
+}
 
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+.dark {
+  --color-bg-primary: #2d3748;
+  --color-bg-secondary: #283141;
+  --color-text-primary: #f7fafc;
+  --color-text-secondary: #e2e8f0;
+  --color-text-accent: #81e6d9;
+}
+
+.light {
+  --color-bg-primary: #ffffff;
+  --color-bg-secondary: #edf2f7;
+  --color-text-primary: #2d3748;
+  --color-text-secondary: #4a5568;
+  --color-text-accent: #2b6cb0;
+}
+
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
+
+@import url("https://fonts.googleapis.com/css2?family=Silkscreen&display=swap");
