--- a/src/index.css
+++ b/src/index.css
@@ -1,21 +1,53 @@
-:root {
-  @apply .light;
+@import url("./styles/output.css");
+.toggleDarkBtn {
+  position: relative;
+  display: inline-block;
+  width: 65px;
+  height: 41px;
 }
-
-.dark {
-  --color-bg-primary: #2d3748;
-  --color-bg-secondary: #283141;
-  --color-text-primary: #f7fafc;
-  --color-text-secondary: #e2e8f0;
-  --color-text-accent: #81e6d9;
+.toggleDarkBtn input {
+  opacity: 0;
+  width: 0;
+  height: 0;
 }
-
-.light {
-  --color-bg-primary: #ffffff;
-  --color-bg-secondary: #edf2f7;
-  --color-text-primary: #2d3748;
-  --color-text-secondary: #4a5568;
-  --color-text-accent: #2b6cb0;
+.slideBtnTg {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgb(241, 40, 40);
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+.slideBtnTg:before {
+  position: absolute;
+  content: "";
+  height: 30px;
+  width: 30px;
+  left: 5px;
+  bottom: 5px;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  background-color: white;
+}
+input:checked + .slideBtnTg {
+  background-color: #1d1e1f;
+}
+input:focus + .slideBtnTg {
+  box-shadow: 0 0 1px #2196f3;
+}
+input:checked + .slideBtnTg:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+.slideBtnTg.round {
+  border-radius: 34px;
+}
+.slideBtnTg.round:before {
+  border-radius: 50%;
 }
 
 @import "tailwindcss/base";
